--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,9 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "no-param-reassign": 0,
+    "import/extensions": 0,
+    "no-console": 0
+  }
 }
